--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~12.2.0",
     "@asoftwareworld/form-builder": "^5.0.7",
     "@asoftwareworld/qrcode": "^1.2.0",
+    "angular-cli-ghpages": "^1.0.5",
     "bootstrap": "^5.2.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
